--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
 body {
 	padding: 25px;
-	font-family: sans-serif;
+	font-family: comfortaa;
+}
+
+@font-face {
+	font-family: comfortaa;
+	src: url(fonts/Comfortaa-VariableFont_wght.ttf);
 }
