--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,67 @@
 body {
-	padding: 25px;
-	font-family: comfortaa;
+	padding: 0px;
+	font-family: code;
 	font-size: 25px;
+	background-color: #1e1d22;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	color: orange;
+	font-family: comfortaa
 }
 
 h1 {
-	font-size: 100px;
+	font-size: 150px;
+	font-family: apex;
+	/* transform: perspective(5000px) translate3d(100px, 25px, 1000px) rotate3d(1, 1, 0, 30deg); */
 }
 
 a {
 	color: orange;
 }
 
+.gradient-text {
+	background-image: linear-gradient(45deg, #ff6720, #ffcc6d);
+	background-size: 50%;
+	background-repeat: repeat;
+	
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent; 
+	-moz-background-clip: text;
+	-moz-text-fill-color: transparent;
+}
+
+.centered {
+	height: 100vh;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+	/* position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%); */
+}
+
+.main {
+	display: flex;
+	height: 100vh;
+	justify-content: center;
+	/* flex-direction: column; */
+	flex-wrap: wrap;
+}
+
+
 @font-face {
 	font-family: comfortaa;
 	src: url(fonts/Comfortaa-VariableFont_wght.ttf);
+}
+
+@font-face {
+	font-family: apex;
+	src: url(fonts/apex-mk2.bold-extended.otf);
+}
+
+@font-face {
+	font-family: code;
+	src: url(fonts/code-new-roman.regular.otf)
 }
